--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,16 +1,14 @@
 ---
-name: Tails Azimuth
-avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
-twitter: https://twitter.com/Twitter
-linkedin: https://www.linkedin.com
-github: https://github.com
+name: 覃江扮
+avatar: /static/images/qinajiangban.png
+occupation: 创始人
+company: 酷哈网络科技工作室
+twitter: https://twitter.com/qinjiangban
+github: https://github.com/qinjiangban
+linkedin: https://www.linkedin.com/qinjiangban
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
+来自中国广西，2021-2024在<a href="https://www.nncvt.edu.cn" target='_blank'>南宁职业技术大学↗</a>商学院就读市场营销策划。高三时期2020年9月在网络上了解到比特币，利用课余时间学习加密货币，21年上大学后有电脑,利用课余时间自学Web3与区块链至今，开始向Web3应用层做项目，去中心化应用 Dapp。
 
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
+2024年为了做项目，创立<a href="https://callha.com" target='_blank'>酷哈网络科技工作室↗</a>合法经营
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
